--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,18 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<div class="heading">
+<header class="heading">
   <h1>Recipes</h1>
-</div>
+</header>
 
-<div class="centered">
-  <section class="cards">
-    <% @recipes.each do |recipe| %>
-      <article class="card">
-        <%= link_to recipe_path(recipe.id) do %>
-          <%= image_tag(photo_url(recipe), :alt => "recipe's photo") %>
-          <h4><%= recipe.title.truncate(70) %></h4>
-        <% end %>
-      </article>
-    <% end %>
-  </section>
-</div>
+<section class="cards">
+  <% @recipes.each do |recipe| %>
+    <article class="card">
+      <%= link_to recipe_path(recipe.id) do %>
+        <%= image_tag(photo_url(recipe), alt: "recipe's photo") %>
+        <h4><%= title(recipe) %></h4>
+      <% end %>
+    </article>
+  <% end %>
+</section>
