--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,16 @@
  *= require_self
  */
 
-/* Add rounded corners to the top left and the top right corner of the image */
+.heading {
+  padding: 10px;
+  line-height: 1.3;
+  margin-left: 2rem;
+}
+
+.heading .byline {
+  padding-left: 0.7rem;
+}
+
 img {
   border-radius: 5px 5px 0 0;
 }
@@ -31,4 +40,8 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   border-radius: 4px;
   padding: 0.3rem;
+}
+
+.back-button {
+  padding: 20px;
 }
