--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,11 +6,6 @@
 
 <section class="cards">
   <% @recipes.each do |recipe| %>
-    <article class="card">
-      <%= link_to recipe_path(recipe.id) do %>
-        <%= image_tag(photo_url(recipe), alt: "recipe's photo") %>
-        <h4><%= title(recipe) %></h4>
-      <% end %>
-    </article>
+    <%= render partial: 'recipe', object: recipe %>
   <% end %>
 </section>
